# mpv-android

app/src/main/cpp/: CMakeLists.txt
buildscripts/: buildall.sh
test/: build.gradle
test/src/androidTest/java/com/mychery/test/: ExampleInstrumentedTest.kt
test/src/main/cpp/: CMakeLists.txt
test/src/main/java/com/mychery/test/: Player.kt
test/src/test/java/com/mychery/test/: ExampleUnitTest.kt
